# scheduly

./: .dockerignore  .gitignore  .mcp.json  CLAUDE.md  Makefile  PROJECT_INDEX.md  package.json  pnpm-lock.yaml  turbo.json
.claude/: settings.local.json
apps/api/: Dockerfile  README.md  main.py  package.json  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/api/: __init__.py  routes.py
apps/api/app/core/: __init__.py  config.py
apps/api/app/integrations/: __init__.py  supabase.py
apps/api/app/lib/: __init__.py  optimizer.py
apps/api/app/models/: __init__.py  schemas.py
apps/api/app/services/: __init__.py  availability.py  demand.py  fatigue_scoring.py  job_store.py  optimizer.py  recommendations.py  shift_writer.py  unavailability.py  validator.py
apps/api/tests/: test_availability.py  test_fatigue.py  test_optimizer_edge_cases.py  test_optimizer_team_profile.py  test_optimizer_timezones.py  test_recommendations_mock.py  test_routes.py  test_unavailability.py  test_validator.py
apps/web/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  vite.config.ts
apps/web/src/: .env-example  App.tsx  index.css
apps/web/src/components/: EmployeeRoute.tsx  ManagerRoute.tsx  ProtectedRoute.tsx  RoleRedirect.tsx  ThemeToggle.tsx
apps/web/src/data/: mockData.ts
apps/web/src/hooks/: useAbsenceImpact.ts  useAuth.tsx  (+13 more)
apps/web/supabase/: config.toml
docs/: note-parser-optimizer-integration.md
docs/requirements/: supabase-package-restructuring.md  ui-redesign-and-roles-cleanup.md
supabase/.temp/: pooler-url
(+54 files in other folders)
