[project]
name = "api"
version = "0.1.0"
description = "FastAPI backend for AI scheduling platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "ortools>=9.12.0",
    "pandas>=2.2.0",
    "numpy>=2.2.0",
    "python-dateutil>=2.9.0",
    "scikit-learn>=1.8.0",
    "tensorflow>=2.21.0",
    "tzdata>=2025.3",
    "python-dotenv>=1.2.2",
    "supabase>=2.5.0",
    "pytest>=9.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.28.0",
]
